# 2024-ectf-uiuc

./: .gitignore  .gitmodules  README.md  attest_guide.md  pyproject.toml  shell.nix
application_processor/: Makefile  firmware.ld  preprocess_ap.py
application_processor/c/: Makefile  Makefile.mk  post_boot.c  project.mk
application_processor/c/inc/: fixes.h
application_processor/c/src/: fixes.c  post_boot.c  post_boot.h  stdio.c
application_processor/rust/: Cargo.toml  Makefile  build.rs  memory.x  package.py
application_processor/rust/.cargo/: config.toml
application_processor/rust/src/: .main.rs.swp  board.rs  c_ffi.rs  flash.rs  lib.rs  main.rs  post_boot.rs  secure_comms.rs  tests.rs
application_processor/rust_/src/: lib.rs  main.rs
application_processor/src/: application_processor.c
component/: Makefile  preprocess_comp.py
component/c/: Makefile
component/c/src/: post_boot.c  post_boot.h
component/rust/: Cargo.toml  Makefile  memory.x  package.py
component/rust/.cargo/: config.toml
component/rust/src/: lib.rs  (+4 more)
custom_nix_pkgs/: analog_openocd.nix
deployment/: Makefile  ectf_constants.rs  gen_global_secrets.py  global_secrets.py  secure_comms.rs
docs/: .gitignore  1-overview.md  2-hide_protocol.md  3-misc_protocol.md  4-security_requirements.md  Makefile  dependencies.sh  flash.md  hide_protocol.md  make_doc.sh  misc_protocol.md  run_once.sh  shell.nix
msdk-hal-rust/: Makefile  driverlib.rs  wrapper.c
msdk-hal-rust/ascon/: Cargo.toml
msdk-hal-rust/libmsdk-sys/: Cargo.toml  build.rs
msdk-hal-rust/max78000-test/: Cargo.toml  Makefile  build.rs  memory.x  package.py
msdk-hal-rust/max78000-test/.cargo/: config.toml
msdk-hal-rust/max78000-test/msdk/: Makefile  project.mk
msdk-hal-rust/max78000-test/src/: board.rs  main.rs
msdk-hal-rust/max78000-test/src/board/: lib.rs  system.rs
msdk-hal-rust/pac/: Cargo.toml  device.x  max78000.svd
msdk-hal-rust/svd/: cpu.svd  flc0_reva_me17.svd  i2c1_reva_me17.svd  tmr0_revb.svd  uart0_revb.svd
rust-lib/ascon/: Cargo.toml
rust-lib/ectf-board/: Cargo.toml
rust-lib/ectf-board/src/: ectf_constants.rs  lib.rs  post_boot_shared.rs  rng.rs  secure_comms.rs  tests.rs
rust-lib/hal/: Cargo.toml
rust-lib/max78000-test/: Cargo.toml  Makefile  memory.x  openocd.cfg  openocd.gdb  package.py
rust-lib/max78000-test/src/: board.rs  main.rs  secure_comms.rs
rust-lib/pac/: Cargo.toml  README.md  max78000.svd
rust-lib/pac/src/: adc.rs  dma.rs  dvs.rs  fcr.rs  flc.rs  i2c0.rs  i2s.rs  icc0.rs  lib.rs  lpcmp.rs  mcr.rs  owm.rs  pwrseq.rs  rtc.rs  simo.rs  spi0.rs  tmr.rs  trng.rs
rust-lib/pac/src/adc/: intr.rs  limit0.rs  status.rs
rust-lib/pac/src/aes/: ctrl.rs  inten.rs  status.rs
rust-lib/pac/src/aeskeys/: key0.rs  key1.rs  key2.rs  key3.rs  key4.rs  key5.rs
rust-lib/pac/src/cameraif/: ctrl.rs  fifo_data.rs  ver.rs
rust-lib/pac/src/crc/: ctrl.rs  datain16.rs  datain32.rs  datain8.rs  val.rs
rust-lib/pac/src/dma/: ch.rs  inten.rs
rust-lib/pac/src/dma/ch/: cntrld.rs  ctrl.rs  srcrld.rs
rust-lib/pac/src/dvs/: adj_dwn.rs  adj_up.rs  ctl.rs  stat.rs  thres_cmp.rs
rust-lib/pac/src/fcr/: fctrl0.rs  urvctrl.rs
rust-lib/pac/src/flc/: actrl.rs  clkdiv.rs  ctrl.rs  data.rs  data0.rs  data1.rs  data2.rs  data3.rs  rlr0.rs  welr0.rs  welr1.rs
rust-lib/pac/src/gcfr/: reg0.rs  reg1.rs  reg2.rs  reg3.rs
rust-lib/pac/src/gcr/: clkctrl.rs  eccaddr.rs  eccced.rs  eccerr.rs  eccie.rs  gpr.rs  memz.rs  pclkdis1.rs  pm.rs  revision.rs  rst0.rs  sysie.rs  sysst.rs
rust-lib/pac/src/gpio0/: ds0.rs  dualedge.rs  en0.rs  en0_clr.rs  en0_set.rs  en2.rs  en2_clr.rs  en2_set.rs  in_.rs  inten.rs  inten_clr.rs  inten_set.rs  intfl_clr.rs  intpol.rs  out.rs  outen.rs  outen_clr.rs  padctrl1.rs  ps.rs  wken.rs  wken_clr.rs
rust-lib/pac/src/i2c0/: clkhi.rs  clklo.rs  dma.rs  fifo.rs  fifolen.rs  mstctrl.rs  rxctrl0.rs  rxctrl1.rs  slave2.rs  slave3.rs  slave_multi.rs  status.rs  timeout.rs  txctrl1.rs
rust-lib/pac/src/i2s/: ctrl0ch0.rs  ctrl1ch0.rs  dmach0.rs  fifoch0.rs  filtch0.rs  intfl.rs  wken.rs  wkfl.rs
rust-lib/pac/src/icc0/: ctrl.rs  info.rs  invalidate.rs  sz.rs
rust-lib/pac/src/mcr/: cmp_ctrl.rs  ctrl.rs  eccen.rs  gpio3_ctrl.rs  ipo_mtrim.rs  outen.rs
rust-lib/pac/src/owm/: clk_div_1us.rs  ctrl_stat.rs  data.rs  inten.rs
rust-lib/pac/src/pt/: rate_length.rs  train.rs
rust-lib/pac/src/ptg/: inten.rs  intfl.rs
rust-lib/pac/src/pwrseq/: gp0.rs  gp1.rs  lpwkst0.rs
rust-lib/pac/src/rtc/: ctrl.rs  toda.rs
rust-lib/pac/src/sema/: irq0.rs  irq1.rs  mail1.rs  semaphores.rs  status.rs
rust-lib/pac/src/simo/: buck_alert_thr_a.rs  buck_alert_thr_c.rs  iload_a.rs  iload_b.rs  iload_c.rs  iload_d.rs  ipka.rs  ipkb.rs  vrego_a.rs  vrego_c.rs  vrego_d.rs  zero_cross_cal_a.rs  zero_cross_cal_b.rs  zero_cross_cal_c.rs  zero_cross_cal_d.rs
rust-lib/pac/src/sir/: fstat.rs  sfstat.rs  sistat.rs
rust-lib/pac/src/spi0/: clkctrl.rs  dma.rs  fifo16.rs  fifo32.rs  sstime.rs  wken.rs  wkfl.rs
rust-lib/pac/src/tmr/: ctrl1.rs  intfl.rs  nolcmp.rs
rust-lib/pac/src/trimsir/: inro.rs  simo.rs
rust-lib/pac/src/trng/: ctrl.rs  data.rs  status.rs
rust-lib/pac/src/uart/: ctrl.rs  dma.rs  fifo.rs  int_fl.rs  pnr.rs  wken.rs  wkfl.rs
rust-lib/pac/src/wdt/: clksel.rs  ctrl.rs  rst.rs
rust-lib/pac/src/wut/: nolcmp.rs  preset.rs
(+374 files in other folders)
