[package]
name = "ap"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", default-features = false, features = ["password-hash"] }
ascon = { version = "0.1.0", path = "../../rust-lib/ascon" }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = { version = "0.7.3", features = ["set-sp", "set-vtor"] }
cortex-m-semihosting = "0.5.0"
max78000-hal = { version = "0.1.0", path = "../../rust-lib/hal" }
max78000-pac = { version = "0.1.0", features = ["rt"], path = "../../rust-lib/pac" }

[features]
default = []
semihosting = []

[lib]
name = "board"
path = "src/board.rs"

[profile.dev]
opt-level = "s"
# lto = true

[profile.release]
opt-level = "s"
debug = false
strip = true
codegen-units = 1
# lto = true