[package]
name = "ap"
authors = ["SIGPwny <ctf@sigpwny.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
ascon = { version = "0.1.0", path = "../../rust-lib/ascon" }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = { version = "0.7.3", features = ["set-sp", "set-vtor"] }
cortex-m-semihosting = "0.5.0"
max78000-hal = { version = "0.1.0", path = "../../rust-lib/hal" }
max78000-pac = { version = "0.1.0", features = ["rt"], path = "../../rust-lib/pac" }
sha3 = { version = "0.10.8", default-features = false }

[features]
default = []
semihosting = []

[lib]
name = "board"
path = "src/board.rs"

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"
debug = false
strip = true
codegen-units = 1
