[package]
name = "ap"
authors = ["SIGPwny <ctf@sigpwny.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = { version = "0.7.3", features = ["set-sp", "set-vtor"] }
cortex-m-semihosting = "0.5.0"
critical-section = "1.1"
ectf-board = { version = "0.1.0", path = "../../rust-lib/ectf-board" }
once_cell = { version = "1.19.0", default-features = false, features = ["critical-section"] }
sha3 = { version = "0.10.8", default-features = false }

[features]
default = []
semihosting = ["ectf-board/semihosting"]

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"
debug = false
strip = true
codegen-units = 1
