[package]
name = "ectf-board"
authors = ["SIGPwny <ctf@sigpwny.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
ascon = { version = "0.1.0", path = "../ascon" }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-semihosting = "0.5.0"
max78000-hal = { version = "0.1.0", path = "../hal" }
max78000-pac = { version = "0.1.0", features = ["rt"], path = "../pac" }

[features]
default = []
semihosting = []