[package]
name = "ectf-board"
authors = ["SIGPwny <ctf@sigpwny.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
ascon = { version = "0.1.0", path = "../ascon" }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
critical-section = "1.1"
max78000-hal = { version = "0.1.0", path = "../hal" }
max78000-pac = { version = "0.1.0", features = ["rt", "critical-section"], path = "../pac" }
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
sha3 = { version = "0.10.8", default-features = false }

[features]
default = []
semihosting = []
