[package]
name = "max78000-test"
version = "0.1.0"
edition = "2021"

[dependencies]
ascon = { version = "0.1.0", path = "../ascon" }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = { version = "0.7.3", features = ["set-sp", "set-vtor"] }
cortex-m-semihosting = "0.5.0"
max78000-hal = { version = "0.1.0", path = "../hal" }
max78000-pac = { version = "0.1.0", features = ["rt"], path = "../pac" }
panic-halt = "0.2.0"

[features]
default = []
semihosting = []

[lib]
name = "board"
path = "src/board.rs"

[profile.dev]
opt-level = "z"
lto = true

[profile.release]
debug = false
strip = true
codegen-units = 1
lto = true