[package]
name = "max78000-pac"
authors = ["SIGPwny <ctf@sigpwny.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
bare-metal = "1.0.0"
cortex-m ="0.7.7"
cortex-m-rt = {version = "0.7.3", optional = true }
critical-section = "1.1"
vcell = "0.1.3"

[features]
rt = ["cortex-m-rt/device"]
critical-section = ["cortex-m/critical-section-single-core"]